components/gateway-api/overlays/ocpai-prd-mtz/gatewayclass-openshift-default.yaml
# Source: gateway-api/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
spec:
  controllerName: openshift.io/gateway-controller/v1
